--- a/packages/swilo/package.json
+++ b/packages/swilo/package.json
@@ -9,48 +9,53 @@
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "cross-env NODE_ENV=production node ./server.js",
     "typecheck": "tsc",
-    "migrate": "tsx -r dotenv/config migrate.ts"
+    "db:generate": "drizzle-kit generate:pg",
+    "db:push": "drizzle-kit push:pg",
+    "db:migrate": "tsx -r dotenv/config migrate.ts",
+    "test": "vitest",
   },
   "dependencies": {
-    "@libsql/client": "^0.6.0",
-    "@remix-run/express": "^2.8.1",
-    "@remix-run/node": "^2.8.1",
-    "@remix-run/react": "^2.8.1",
-    "compression": "^1.7.4",
-    "drizzle-orm": "^0.30.7",
-    "express": "^4.18.2",
-    "isbot": "^4.1.0",
-    "morgan": "^1.10.0",
-    "pg": "^8.11.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@libsql/client": "0.6.0",
+    "@remix-run/express": "2.8.1",
+    "@remix-run/node": "2.8.1",
+    "@remix-run/react": "2.8.1",
+    "compression": "1.7.4",
+    "drizzle-orm": "0.30.7",
+    "express": "4.18.2",
+    "isbot": "4.1.0",
+    "morgan": "1.10.0",
+    "pg": "8.11.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.8.1",
-    "@types/compression": "^1.7.5",
-    "@types/express": "^4.17.20",
-    "@types/morgan": "^1.9.9",
-    "@types/pg": "^8.11.4",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "autoprefixer": "^10.4.19",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.4.5",
-    "drizzle-kit": "^0.20.14",
-    "eslint": "^8.38.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.38",
-    "remix-flat-routes": "^0.6.4",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.1.6",
-    "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "@remix-run/dev": "2.8.1",
+    "@types/compression": "1.7.5",
+    "@types/express": "4.17.20",
+    "@types/morgan": "1.9.9",
+    "@types/pg": "8.11.4",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "6.7.4",
+    "@typescript-eslint/parser": "6.7.4",
+    "autoprefixer": "10.4.19",
+    "cross-env": "7.0.3",
+    "dotenv": "16.4.5",
+    "drizzle-kit": "0.20.14",
+    "eslint": "8.38.0",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "happy-dom": "^14.7.1",
+    "postcss": "8.4.38",
+    "remix-flat-routes": "0.6.4",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.1.6",
+    "vite": "5.1.0",
+    "vite-tsconfig-paths": "4.2.1",
+    "vitest": "1.4.0"
   },
   "engines": {
     "node": ">=18.0.0"
