--- a/packages/swilo/package.json
+++ b/packages/swilo/package.json
@@ -12,7 +12,7 @@
     "db:generate": "drizzle-kit generate:pg",
     "db:push": "drizzle-kit push:pg",
     "db:migrate": "tsx -r dotenv/config migrate.ts",
-    "test": "vitest",
+    "test": "vitest"
   },
   "dependencies": {
     "@libsql/client": "0.6.0",
