--- a/packages/swilo/package.json
+++ b/packages/swilo/package.json
@@ -42,6 +42,7 @@
     "cross-env": "7.0.3",
     "dotenv": "16.4.5",
     "drizzle-kit": "0.20.14",
+    "drizzle-zod": "^0.5.1",
     "eslint": "8.38.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-import": "2.28.1",
@@ -55,7 +56,8 @@
     "typescript": "5.1.6",
     "vite": "5.1.0",
     "vite-tsconfig-paths": "4.2.1",
-    "vitest": "1.4.0"
+    "vitest": "1.4.0",
+    "zod": "^3.22.4"
   },
   "engines": {
     "node": ">=18.0.0"
