--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@epic-web/totp": "^1.1.2",
     "@fontsource/poppins": "^5.0.13",
     "@libsql/client": "0.6.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@remix-run/express": "2.8.1",
     "@remix-run/node": "2.8.1",
     "@remix-run/react": "2.8.1",
