--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:generate": "drizzle-kit generate:pg",
     "db:push": "drizzle-kit push:pg",
     "db:migrate": "tsx -r dotenv/config migrate.ts",
+    "db:seed": "tsx ./app/lib/db/seed.ts",
     "test": "vitest"
   },
   "dependencies": {
